# knowledge-nexus-local

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: K2K_PROTOCOL.md
docs/superpowers/plans/: 2026-04-15-p1-data-layer-migration.md  2026-04-15-p2-pluggable-quantizer.md  2026-04-17-p3-entity-dedup-graph.md
docs/superpowers/specs/: 2026-04-15-graph-and-quantizer-integration-design.md  2026-04-17-p3-entity-dedup-graph-design.md
k2k-common/: Cargo.toml
patches/arrow-arith-52.2.0/src/: temporal.rs
patches/lance-0.19.2/: .cargo_vcs_info.json  Cargo.toml
patches/lance-0.19.2/src/: lib.rs
scripts/: decode_token.py  generate_agent_token.py  request_agent_token.py  test_ws_auth.py
src/: constants.rs  lib.rs  main.rs  path_utils.rs
src/config/: mod.rs
src/connection/: client.rs  messages.rs  mod.rs
src/connectors/: local_files.rs  mod.rs  registry.rs  traits.rs  web_clip.rs
src/db/: migrations.rs  mod.rs  models.rs  repository.rs
src/discovery/: mdns.rs  mod.rs  registry.rs
src/embeddings/: mod.rs
src/federation/: agreements.rs  mod.rs  remote_query.rs
src/k2k/: capabilities.rs  handlers.rs  keys.rs  middleware.rs  mod.rs  models.rs  remote_handler.rs  server.rs  task_handlers.rs  tasks.rs
src/knowledge/: articles.rs  conversations.rs  entity_extractor.rs  extraction.rs  mod.rs
src/migrate/: mod.rs
src/retrieval/: confidence.rs  expansion.rs  graph.rs  hybrid.rs  mod.rs  reranker.rs
src/router/: context.rs  executor.rs  merger.rs  mod.rs  planner.rs
src/search/: indexer.rs  mod.rs  walker.rs
src/security/: audit.rs  mod.rs  whitelist.rs
src/store/: hash.rs  migrations.rs  mod.rs  models.rs  schema.rs  slugify.rs
src/tray/: mod.rs
src/ui/: assets.rs  mod.rs
src/vectordb/: mod.rs  quantizer.rs
tests/: migration_sqlite_to_surreal.rs  quantizer_integration.rs
